fixed image issue
image on introductory dives is not responsive right now.

--- a/dev/mock2/css/media-queries.css
+++ b/dev/mock2/css/media-queries.css
@@ -63,7 +63,6 @@
 	.services-offered { margin: 10px; height: 370px; }
     .classes-offered {height: 170px}}
 
-    img {width: 100%;}
 }
 
 @media screen and (max-width: 740px) 	{}
